--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -19,18 +19,15 @@ http {
     keepalive_timeout  65;
 
     init_by_lua_block {
-        package.path = package.path .. ";" .. "/usr/local/openresty/nginx/firewall/" .. "?.lua"
+        package.path = package.path .. ";/usr/local/openresty/nginx/firewall/?.lua"
     }
 
     server {
         listen       80;
         server_name  localhost;
-
-
         location / {
             default_type text/html;
             rewrite_by_lua_file firewall/security.lua;
-            # content_by_lua_file firewall/test.lua;
             proxy_pass http://localhost:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -38,26 +35,10 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-CSRFToken $http_x_csrf_token; 
         }
-
-        # location /sqlwaf1 {
-        #     default_type text/html;
-        #     access_by_lua_file firewall/sqlwaf1.lua;
-        #     content_by_lua_block {
-        #         return ngx.redirect('/');
-        #     }
-        # }
-
-        location = /robots.txt {
-            alias robots.txt;
-        }
-
-        #error_page  404              /404.html;
-
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
         }
-
     }
 
 }
